--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,19 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pandas = "^2.2.3"
+ipykernel = "^6.29.5"
+scikit-learn = "^1.5.2"
+matplotlib = "^3.9.2"
+python-dotenv = "^1.0.1"
+scipy = "^1.14.1"
+tqdm = "^4.66.5"
+langchain = "^0.3.1"
+langchain-openai = "^0.2.1"
 
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.6.7"
 
 [build-system]
 requires = ["poetry-core"]
